# avoiding-recursion

./: .gitignore  README.md
C/: .gitignore  CMakeLists.txt  README.md  dynarr.c  dynarr_test.c  fib.c  stack.c  stack_test.c  stack_traversal.c  threaded.c  trampoline.c  traversal.h  traversal_test.c  tree.c
figs/: figs.graffle
go/: README.md  trampoline.go  trees.go
python/: README.md  fact.py  parent.py  threaded.py  trampoline-generator.py  trampoline.py  trees.py
rust/: README.md
rust/cps/: Cargo.toml
rust/cps/src/: main.rs
rust/trampoline/src/: main.rs
